syntax = "proto3";
option java_package = "com.meijie.proto";
option java_outer_classname = "ImRequestProtos";
option java_generate_equals_and_hash = true;

import "google/protobuf/any.proto";

message RequestHeaderProto {
    string methodName = 1;
    string declaringClassProtocolName = 2;
    uint32 clientProtocolVersion = 3;
}

message ImRequest {
    RequestHeaderProto header = 1;
    google.protobuf.Any playload = 2;
}

message ImResponse {
    string methodName = 1;
    google.protobuf.Any playload = 2;
}